# QQVoiceChange

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/cheng/qqvoicechange/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: qqvoicer.cpp
app/src/main/cpp/inc/: com_example_cheng_qqvoicechange_EffectUtils.h
app/src/main/java/com/example/cheng/qqvoicechange/: EffectUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/cheng/qqvoicechange/: ExampleUnitTest.java
